<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/main_color">

        <ImageView
            android:id="@+id/remark_back"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:padding="15dp"
            android:src="@mipmap/back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/add_remark"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </RelativeLayout>


    <TextView
        android:layout_marginLeft="15dp"
        android:layout_marginTop="30dp"
        android:text="@string/remark_name"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:paddingLeft="15dp"
        android:layout_marginTop="@dimen/layout_15dp"
        android:id="@+id/add_friend_remark"
        android:textColorHint="@color/text_color"
        android:hint="请输入备注名"
        android:textSize="16sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <Button
        android:id="@+id/add_remark_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_50dp"
        android:layout_margin="@dimen/layout_30dp"
        android:background="@drawable/button_main_bg"
        android:text="@string/add"
        android:textColor="@color/white"
        android:textSize="@dimen/text_17sp" />

</LinearLayout>