<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_50dp"
        android:background="@color/main_color"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="@dimen/layout_0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:id="@+id/bt_return"
                android:layout_width="@dimen/layout_10dp"
                android:layout_height="@dimen/layout_20dp"
                android:layout_gravity="center"
                android:background="@mipmap/back"
                android:paddingRight="@dimen/layout_30dp" />

        </LinearLayout>

        <TextView
            android:layout_width="@dimen/layout_0dp"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:gravity="center"
            android:text="@string/imageQuality"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_low"
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_55dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_low"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/layout_20dp"
            android:layout_marginTop="@dimen/layout_20dp"
            android:background="@mipmap/notselected" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/layout_10dp"
            android:layout_marginTop="@dimen/layout_20dp"
            android:text="@string/lowImageQuality"
            android:textSize="@dimen/text_15sp" />

    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_0.2dp"
        android:background="@color/actions_panel_lan" />


    <LinearLayout
        android:id="@+id/ll_medium"
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_55dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/layout_20dp"
            android:layout_marginTop="@dimen/layout_20dp"
            android:background="@mipmap/notselected" />


        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/layout_10dp"
            android:layout_marginTop="@dimen/layout_20dp"
            android:text="@string/mediumImageQuality"
            android:textSize="@dimen/text_15sp" />


    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_0.2dp"
        android:background="@color/actions_panel_lan" />


    <LinearLayout
        android:id="@+id/ll_high"
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_55dp"
        android:background="@color/white"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/iv_high"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/layout_20dp"
            android:layout_marginTop="@dimen/layout_20dp"
            android:background="@mipmap/notselected" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/layout_10dp"
            android:layout_marginTop="@dimen/layout_20dp"
            android:text="@string/highImageQuality"
            android:textSize="@dimen/text_15sp" />

    </LinearLayout>


</LinearLayout>