<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/main_color">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:text="@string/phoneBook"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/main_color"
                android:paddingBottom="10dp">

                <EditText
                    android:id="@+id/search_user"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:background="@drawable/edit_bg"
                    android:drawableLeft="@mipmap/search"
                    android:drawablePadding="5dp"
                    android:hint="@string/search"
                    android:paddingLeft="5dp"
                    android:textSize="13sp" />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/layout_to_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="10dp"
                android:paddingLeft="15dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp">

                <com.ityun.zhihuiyun.view.CircleTextView
                    android:id="@+id/group"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:gravity="center"
                    android:text="群组"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    app:fillColor="@color/main_color" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:text="@string/group"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/group_num"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="@string/group"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <ImageView
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_gravity="center"
                    android:src="@mipmap/right" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/trans_grey" />

            <!--<TextView-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_margin="10dp"-->
            <!--android:paddingLeft="5dp"-->
            <!--android:text="@string/friend"-->
            <!--android:textColor="@color/black"-->
            <!--android:textSize="16sp"-->
            <!--android:textStyle="bold" />-->

            <com.ityun.zhihuiyun.view.NoScrollListView
                android:id="@+id/department_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="@color/trans_grey"
                android:dividerHeight="2dp"
                android:listSelector="@color/white" />

            <com.ityun.zhihuiyun.view.NoScrollListView
                android:id="@+id/friend_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="@color/trans_grey"
                android:dividerHeight="2dp"
                android:listSelector="@color/white" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>