<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/main_color">

        <ImageView
            android:id="@+id/change_group_back"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="15dp"
            android:src="@mipmap/back" />

        <com.ityun.zhihuiyun.view.CircleTextView
            android:id="@+id/group_name_circle"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="群组"
            android:textColor="@color/main_color"
            android:textSize="18sp"
            app:borderColor="@color/white"
            app:borderWidth="2dp"
            app:fillColor="@color/white" />

        <TextView
            android:id="@+id/change_group_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/group_name_circle"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_to_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="群成员"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/selected_user_num_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/text_color"
            android:textSize="16sp" />
        <ImageView
            android:id="@+id/iv_list"
            android:layout_width="16dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/layout_5dp"
            android:src="@mipmap/personal_arrows" />
    </LinearLayout>

    <GridView
        android:id="@+id/group_user_gridview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:listSelector="@color/white"
        android:numColumns="7"
        android:paddingBottom="10dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="5dp"
        android:verticalSpacing="10dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/alertdialog_line" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/change_group_name_tx"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="群名称"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_gravity="center"
                android:layout_marginRight="10dp"
                android:src="@mipmap/personal_arrows" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/alertdialog_line"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/change_group_img"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="修改群头像"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_gravity="center"
                android:layout_marginRight="10dp"
                android:src="@mipmap/personal_arrows" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical"
            android:text="@string/becareful_group_img"
            android:textColor="@color/text_color"
            android:textSize="12sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/alertdialog_line" />

    <LinearLayout
        android:id="@+id/delete_all_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingLeft="15dp"
        android:paddingTop="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="清空聊天记录"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_gravity="center"
            android:layout_marginRight="10dp"
            android:src="@mipmap/personal_arrows" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/alertdialog_line">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:paddingLeft="15dp"
            android:text="@string/becareful_message"
            android:textColor="@color/text_color"
            android:textSize="12sp" />


        <Button
            android:id="@+id/delete_group_button"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/button_main_bg"
            android:text="@string/delete_group"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </RelativeLayout>
</LinearLayout>